# rfgboost

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml  compatibility.yml  gpu-wheels.yml  pyodide-wheel.yml  pypi-release.yml  release.yml  testpypi-release.yml  typecheck.yml
examples/web/: README.md  index.html
examples/web/wheels/: fastwoe_rs-0.1.11-cp39-abi3-emscripten_4_0_9_wasm32.whl  fastwoe_rs-0.1.11-cp39-abi3-pyodide_2024_0_wasm32.whl  rfgboost-0.1.0-cp312-cp312-pyodide_2024_0_wasm32.whl  rfgboost-0.1.1-cp312-cp312-pyodide_2024_0_wasm32.whl  rfgboost-0.1.1-cp39-abi3-emscripten_4_0_9_wasm32.whl
marimo/: README.md  marimo_notebook.ipynb  marimo_notebook.py
notebooks/: categorical-rfgboost.ipynb  rfgboost-animation.ipynb  tuning-rfgboost.ipynb  uncertainty-estimation.ipynb
rfgboost/: __init__.py  _estimators.py  _woe.py  rfgboost.py
scripts/: generate_animation.py  test_compatibility.py
src/: boosting.rs  cuda.rs  decision_tree.rs  gpu.rs  histogram.rs  lib.rs  par.rs  random_forest.rs  tree.rs  tree_shap.rs  unsupervised.rs
tests/: README.md  __init__.py  test_async_rf.py  test_decision_tree.py  test_monotonic.py  test_multiclass_cat.py  test_random_forest.py  test_rfgboost.py  test_sample_weight.py  test_to_dict.py  test_tree_shap.py
tests/compatibility/: README.md  __init__.py  conftest.py  test_python_versions.py
tests/integration/: conftest.py  test_fastwoe_integration.py  test_inference.py  test_plot_scenario.py  test_xgboost_confidence_intervals.py  test_xgboost_integration.py  test_xgboost_tree_success.py
tests/unit/: conftest.py  test_tree_extraction.py  test_trees_dataframe.py  test_woe_preprocessor.py  test_woe_preprocessor_logic.py
