[package]
name = "rfgboost"
version = "0.2.2"
edition = "2021"

[lib]
name = "rfgboost_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "gil-refs", "abi3-py39"] }
numpy = "0.22"
ndarray = "0.15"
rand = "0.8"
rand_pcg = "0.3"

# Pyodide/wasm is single-threaded; rayon is native-only and replaced by a
# sequential shim on emscripten (see src/par.rs).
[target.'cfg(not(target_os = "emscripten"))'.dependencies]
rayon = "1.10"
# Optional GPU inference backend (wgpu -> Metal/Vulkan/DX12). Native-only and
# OFF by default; enable with `--features gpu`. Never enabled for the wasm wheel.
wgpu = { version = "29", optional = true }
pollster = { version = "0.4", optional = true }
bytemuck = { version = "1", optional = true, features = ["derive"] }
# Optional native CUDA backend (cudarc + nvrtc). Native NVIDIA only, off by
# default; enable with `--features cuda`. dynamic-loading dlopens libcuda/nvrtc
# at runtime, so no CUDA toolkit is needed at build time.
cudarc = { version = "0.19", optional = true, default-features = false, features = ["driver", "nvrtc", "dynamic-loading", "std", "cuda-12080"] }

[features]
gpu = ["dep:wgpu", "dep:pollster", "dep:bytemuck"]
cuda = ["dep:cudarc"]

[lints.rust]
# pyo3 0.22 with the `gil-refs` compat feature: PyDict::new / PyList::empty /
# GIL-ref args are deprecated in favor of the *_bound / Bound<'_, T> API. That
# migration (and dropping `gil-refs`) is tracked separately; silence until then.
deprecated = "allow"

[lints.clippy]
# False positives at the pyo3 `#[pymethods]` boundary: `?` on a PyResult helper
# is reported as an identity PyErr conversion that cannot actually be removed.
useless_conversion = "allow"
# The RF / boosting builders intentionally take many hyperparameters positionally
# to mirror the Python signatures; splitting them into structs adds no clarity.
too_many_arguments = "allow"
# Proximity/eigen matrix math indexes 2D vecs by (i, j); explicit range loops are
# clearer here than iterator/enumerate gymnastics.
needless_range_loop = "allow"
