[build-system]
requires = ["maturin>=1.0", "numpy>=1.21.0"]
build-backend = "maturin"

[project]
name = "rfgboost"
version = "0.1.0"
description = "RFGBoost: async Random Forest + gradient boosting engine in Rust with CI-based convergence"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "xRiskLab", email = "contact@xrisklab.ai"}]
requires-python = ">=3.9"
keywords = [
    "machine-learning",
    "gradient-boosting",
    "random-forest",
    "rust",
    "pyo3",
    "conformal-prediction",
    "tree-shap",
]
dependencies = [
    "numpy>=1.21.0",
    "fastwoe-rs>=0.1.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
test = [
    "scikit-learn>=1.0.0",
    "shap>=0.41.0",
    "pytest>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/xRiskLab/rfgboost"
Repository = "https://github.com/xRiskLab/rfgboost"
Documentation = "https://github.com/xRiskLab/rfgboost#readme"
Issues = "https://github.com/xRiskLab/rfgboost/issues"
PyPI = "https://pypi.org/project/rfgboost/"

[tool.maturin]
module-name = "rfgboost._rs"
features = ["pyo3/extension-module"]

[tool.maturin.build-options]
strip = true
release = true

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "C4", "UP", "SLF", "ARG", "D"]
ignore = [
    "E203",   # whitespace before ':'
    "E501",   # line too long
    "N802",   # Function name should be lowercase (allow _prepare_X for ML)
    "N803",   # Argument name should be lowercase (allow X_train, y_train for ML)
    "N806",   # Variable in function should be lowercase (allow X, y for ML)
    "C408",   # Unnecessary dict() call (dict(...) style used for kwargs)
    "UP006",  # Dict spelling for Python 3.9 compatibility
    "UP007",  # Union[X, Y] needed for Python 3.9 compatibility
    "UP035",  # typing.Dict / typing.List still needed for 3.9
    "UP045",  # Optional[X] needed for Python 3.9 compatibility
    "SLF001", # protected access
    "C901",   # too complex
    "ARG001", # unused function argument
    "ARG002", # unused method argument
    "ARG003", # unused class method argument
    "ARG004", # unused static method argument
    "ARG005", # unused lambda argument
    "D100",   # missing docstring in public module
    "D101",   # missing docstring in public class
    "D102",   # missing docstring in public method
    "D103",   # missing docstring in public function
    "D104",   # missing docstring in public package
    "D105",   # missing docstring in magic method
    "D106",   # missing docstring in public nested class
    "D107",   # missing docstring in __init__
    "D200",   # short docstring should fit on one line
    "D205",   # blank line required between summary and description
    "D212",   # multi-line docstring summary should start at the first line
    "D400",   # first line should end with a period
    "D415",   # first line should end with punctuation
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "D",      # ignore docstring rules in tests
    "SLF001", # allow protected access in tests
    "ARG",    # allow unused arguments in test fixtures
    "N801",   # class name should use CapWords convention
    "N802",   # function name should be lowercase
]
"scripts/*" = [
    "D",      # ignore docstring rules in scripts
    "N803",
    "N806",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
dev = [
    "scikit-learn>=1.0.0",
    "shap>=0.41.0",
    "pytest>=7.0.0",
    "maturin>=1.0",
    "ruff>=0.11.13",
    "mypy>=1.11.0",
]

[tool.mypy]
python_version = "3.9"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
show_error_codes = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "rfgboost._rs",
    "fastwoe",
    "fastwoe_rs.*",
    "sklearn.*",
    "shap.*",
]
ignore_missing_imports = true
